--- a/src/index.html
+++ b/src/index.html
@@ -34,21 +34,33 @@
     />
   </head>
   <body class="flex flex-col h-full m-0 p-0 w-full">
-    <div class="flex">
-      <button id="back" onclick="handleBackClick()" disabled="true">
-        <i class="fas fa-arrow-left"></i></button
-      >&nbsp;
-      <button id="forward" onclick="handleForwardClick()" disabled="true">
-        <i class="fas fa-arrow-right"></i></button
-      >&nbsp;
+    <div class="flex p-2 border-b border-gray-300">
+      <button
+        id="back"
+        onclick="handleBackClick()"
+        disabled="true"
+        class="p-1 hover:bg-gray-200 rounded mr-2"
+      >
+        <i class="fas fa-arrow-left"></i>
+      </button>
+      <button
+        id="forward"
+        onclick="handleForwardClick()"
+        disabled="true"
+        class="p-1 hover:bg-gray-200 rounded"
+      >
+        <i class="fas fa-arrow-right"></i>
+      </button>
       <input
         id="nip19"
         type="text"
         size="50"
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
-        class="w-full"
-      />&nbsp;
-      <button onclick="handleClick()"><i class="fas fa-search"></i></button>
+        class="w-full bg-gray-200 rounded p-1 mx-4"
+      />
+      <button onclick="handleClick()" class="p-1 hover:bg-gray-200 rounded">
+        <i class="fas fa-search"></i>
+      </button>
     </div>
     <iframe id="iframe" class="grow m-0 p-0"></iframe>
 
