ボタンを丸くする

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         id="back"
         onclick="handleBackClick()"
         disabled="true"
-        class="p-1 rounded mr-2 text-gray-400"
+        class="w-8 h-8 rounded-full mr-2 text-gray-400"
       >
         <i class="fas fa-arrow-left"></i>
       </button>
@@ -47,7 +47,7 @@
         id="forward"
         onclick="handleForwardClick()"
         disabled="true"
-        class="p-1 rounded text-gray-400"
+        class="w-8 h-8 rounded-full text-gray-400"
       >
         <i class="fas fa-arrow-right"></i>
       </button>
@@ -58,7 +58,7 @@
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
         class="w-full bg-gray-200 rounded p-1 mx-4"
       />
-      <button onclick="handleClick()" class="p-1 hover:bg-gray-200 rounded">
+      <button onclick="handleClick()" class="w-8 h-8 hover:bg-gray-200 rounded-full">
         <i class="fas fa-search"></i>
       </button>
     </div>
