--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         type="text"
         size="50"
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
-        class="w-full bg-gray-200 rounded p-1 mx-4"
+        class="w-full bg-gray-100 rounded-full py-1 px-4 mx-4"
       />
       <button onclick="handleClick()" class="w-8 h-8 hover:bg-gray-200 rounded-full">
         <i class="fas fa-search"></i>
