Go ボタンをテキストに戻す

--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,11 @@
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
         class="w-full bg-gray-100 rounded-full py-1 px-4 mx-4"
       />
-      <button onclick="handleClick()" class="w-8 h-8 hover:bg-gray-200 rounded-full">
-        <i class="fas fa-search"></i>
+      <button
+        onclick="handleClick()"
+        class="px-2 py-1 hover:bg-gray-200 rounded"
+      >
+        Go
       </button>
     </div>
     <iframe id="iframe" class="grow m-0 p-0"></iframe>
