--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         id="back"
         onclick="handleBackClick()"
         disabled="true"
-        class="w-8 h-8 rounded-full mr-2 text-gray-400"
+        class="w-8 h-8 rounded-full mr-1 text-gray-400"
       >
         <i class="fas fa-arrow-left"></i>
       </button>
@@ -56,7 +56,7 @@
         type="text"
         size="50"
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
-        class="w-full bg-gray-100 rounded-full py-1 px-4 mx-4"
+        class="w-full bg-gray-100 rounded-full py-1 px-4 mr-1 ml-2"
       />
       <button
         onclick="handleClick()"
