ちらつきを修正する
Fixes #41

--- a/src/index.html
+++ b/src/index.html
@@ -182,6 +182,7 @@
         iframe.srcdoc = unescapeXML(
           new XMLSerializer().serializeToString(iframe.contentWindow.document)
         );
+        iframe.onload = null;
       };
 
       const unescapeXML = (xml) =>
