--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         "wss://r.hostr.cc",
       ];
 
-      const replaceNip21ToResource = (events) =>
+      const replaceNip21ToResource = (events) => {
         [
           ...iframe.contentWindow.document.querySelectorAll(
             "script[src^='nostr:'], link[href^='nostr:']"
@@ -76,6 +76,17 @@
           el.src && (el.src = `data:text/javascript;base64,${data}`);
           el.href && (el.href = `data:text/css;base64,${data}`);
         });
+        [
+          ...iframe.contentWindow.document.querySelectorAll(
+            "img[src^='nostr:']"
+          ),
+        ].forEach((img) => {
+          const nip21 = img.src;
+          const event = events[nip21];
+          const typeTag = findTag(event, "type");
+          typeTag && (img.src = `data:${typeTag[1]};base64,${event.content}`);
+        });
+      };
 
       const createFilter = (uri) => {
         const { type, data } = window.NostrTools.nip19.decode(
@@ -125,16 +136,6 @@
         const events = await fetchResourceEvents();
 
         replaceNip21ToResource(events);
-        [
-          ...iframe.contentWindow.document.querySelectorAll(
-            "img[src^='nostr:']"
-          ),
-        ].forEach((img) => {
-          const nip21 = img.src;
-          const event = events[nip21];
-          const typeTag = findTag(event, "type");
-          typeTag && (img.src = `data:${typeTag[1]};base64,${event.content}`);
-        });
 
         iframe.srcdoc = new XMLSerializer().serializeToString(
           iframe.contentWindow.document
