const を使用して history を宣言する

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
         await open(uri);
       };
 
-      let history = {
+      const history = {
         history: [],
         historyIndex: -1,
 
