--- a/src/index.html
+++ b/src/index.html
@@ -239,8 +239,7 @@
 
         push(uri) {
           this._history =
-            this._history[this._index]?.replace(/^nostr:/, "") ==
-            uri.replace(/^nostr:/, "")
+            this._history[this._index] == uri
               ? this._history
               : [...this._history.slice(0, ++this._index), uri];
         },
