--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           });
       };
 
-      const replaceNip21ToResource = async (document) => {
+      const convertNip21sToResource = async (document) => {
         const events = await fetchResourceEvents(document);
 
         [
@@ -177,7 +177,7 @@
                     virtualDom.contentWindow.document,
                     proxyTag[1]
                   )
-                : await replaceNip21ToResource(
+                : await convertNip21sToResource(
                     virtualDom.contentWindow.document
                   );
 
